tests/baselines/reference/parserConstructorAmbiguity1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity1.ts (1 errors) ====
    new Date<A;
             ~
!!! error TS2304: Cannot find name 'A'.